--- a/.gitignore
+++ b/.gitignore
@@ -346,5 +346,7 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+task-03/tempCodeRunnerFile.py
+
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
